# comp-477-project

./: .gitignore  CMakeLists.txt  README.md
lib/assimp/: ALL_BUILD.vcxproj  Assimp.sln  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj.filters  assimpTargets-debug.cmake  assimpTargets-release.cmake  cmake_install.cmake  revision.h
lib/assimp/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  cmake_install.cmake
lib/assimp/code/assimp.dir/Debug/: assimp.res
lib/assimp/code/assimp.dir/Release/: assimp-vc142-mt.lib.recipe  assimp.res
lib/assimp/contrib/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/assimp/contrib/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.sln  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
lib/assimp/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  unit.vcxproj  unit.vcxproj.filters
lib/assimp/test/headercheck/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/assimp/tools/assimp_cmd/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp_cmd.vcxproj  assimp_cmd.vcxproj.filters  cmake_install.cmake
lib/glew/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  glew.sln  libglew_shared.vcxproj  libglew_shared.vcxproj.filters  libglew_static.vcxproj  libglewmx_shared.vcxproj  libglewmx_static.vcxproj
lib/glew/libglew_static.dir/Debug/: glewd.lib.recipe
lib/glfw/examples/: heightmap.c
lib/glm/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  glm.pc  glm.sln
lib/glm/glm/: INSTALL.vcxproj  INSTALL.vcxproj.filters  glm_dummy.vcxproj  glm_dummy.vcxproj.filters
lib/glm/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/glm/test/bug/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/glm/test/core/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/glm/test/gtc/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/glm/test/gtx/: INSTALL.vcxproj  INSTALL.vcxproj.filters
lib/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
resources/shaders/: fShader.glsl  particles_shader.frag  particles_shader.vert  scene_shader.frag  scene_shader.vert  sky_shader.vert  vShader.glsl
src/: Camera.cpp  Camera.h  EventHandler.cpp  EventHandler.h  Grid.cpp  Grid.h  InstancedRenderer.cpp  InstancedRenderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Particle.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Simulation.cpp  Simulation.h  SkyRenderer.cpp  SkyRenderer.h  UserInterface.cpp  UserInterface.h  main.cpp
src/helpers/: IncludeHeader.h  RootDir.h
(+56 files in other folders)
